--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Alex Parker | Full Stack Developer</title>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+     (function(){
+     emailjs.init("HJ_lNx77PqrIwMwk-");
+     })();
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
